Fixing Line Spacing Issue

--- a/css/projects.css
+++ b/css/projects.css
@@ -34,7 +34,7 @@
 #projList h4 {
    margin-bottom: 10px;
    font-size: 22px;
-   margin-bottom: 30px;
+   margin-bottom: 10px;
 }
 
 #projList li:hover {
